<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello"
    />
<Button android:id="@+id/shopping_lists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/Shopping_Lists" />
<Button android:id="@+id/calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Calendar" />
<Button android:id="@+id/inventory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Inventory" />
<Button android:id="@+id/preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Preferences" />
<Button android:id="@+id/statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Statistics" />




</LinearLayout>
